See ChangeLog.d/* for detailed revision history.

* Changes up to version 2.1

** Server

Users are now stored in the database rather than a configuration file.

** Web Interface

The web interface now uses cookies to remember user identity, and allows
online registration of new users.

* Changes up to version 2.0

** General

Tracks can now have tags associated with them.  See tags in disorder(1)
or the preferences documentation for the web interface or Disobedience.

The search facility knows how to limit results by tag (see search
documentation for any interface) as well as by word search.  It is
possible to limit random play by tag (see required-tags and
prohibited-tags in disorder_config(5)).

Unicode support is improved.  Case-folding and word breaking now follows
the rules given in the Unicode standard (with a bit of tailoring in the
latte case).

** Disobedience

There is a new client, 'Disobedience', that depends on the GTK+ library.
Feedback on the interface would be very welcome.

** Web Interface

The "New" screen display tracks recently added to the database.  From
here they can be played or their preferences changed.

Long track names are truncated so they fit better on the screen.  Hover
for the full name.

** Network Play

DisOrder can broadcast audio over a network, allowing it to be played on
multiple client machines.  See README.streams for details.

** Server

Slow file lookups are cached in the server.  This should help
installations with large collections and/or slow platforms.

The 'enabled' and 'random_enabled' configuration options are now gone.
Instead the state survives from one run of the server to the next.
'disable now' is gone as well - if you want to emulate it disable
playing and then scratch the current track.

The 'pick' plugin has been abolished.  All the logic formerly done there
is now built into the server, where it can be done much more
efficiently.

'tracklength' plugins must be explicitly specified.
