@@ -221,19 +221,15 @@ You need to configure a number of things to make this work:
 
      install -m 755 clients/disorder.cgi ~jukebox/public_html/index.cgi
 
-4. The config file must list the URL of the web interface explicitly:
-
-     url http://jukebox.DOMAIN/
-
-5. Try it out.  You should be able to perform read-only operations straight
+4. Try it out.  You should be able to perform read-only operations straight
    away, and after visiting the 'Login' page to authenticate, perform other
    operations like adding a track to the queue.
 
-6. If you run into problems, always look at the appropriate error log; the
+5. If you run into problems, always look at the appropriate error log; the
     message you see in your web browser will usually not be sufficient to
     diagnose the problem all by itself.
 
-7. If you have a huge number of top level directories, then you might find
+6. If you have a huge number of top level directories, then you might find
     that the 'Choose' page is unreasonably large.  If so add the following line
     to /etc/disorder/options.user:
       label sidebar.choosewhich choosealpha
